feat: added enpoint and controller to get user profile
